2012-05-16  Alberto Garcia  <agarcia@igalia.com>

	PR gas/14082
	* app.c (do_scrub_chars): Prevent possible out of bounds access to
	lex[] array.

2012-05-16  Georg-Johann Lay  <avr@gjlay.de>

	PR target/13503
	* config/tc-avr.c (avr_cons_fix_new): Rename R_AVR_8_HHI8 to
	R_AVR_8_HLO8.
	(exp_mod_data) Ditto. And replace "hhi8" with "hlo8".
	(md_apply_fix): Rename BFD_RELOC_AVR_8_HHI to BFD_RELOC_AVR_8_HLO.

2012-05-16  Nathan Sidwell  <nathan@codesourcery.com>
	    Kwok Cheung Yeung  <kcy@codesourcery.com>

	* config/tc-m68k.c (m68k_cpus): Add 51ag, 51je, 51jf, 51jg, 51mm,
	51qm variants.

2012-05-15  James Murray <jsm@jsm-net.demon.co.uk>

	* config/tc-m68hc11.c: Add S12X and XGATE co-processor support.
	Add option to offset S12 addresses into XGATE memory space.
	Tweak target flags to match other tools. (i.e. -m m68hc11).
	* doc/as.texinfo: Mention new options.
	* doc/c-m68hc11.texi: Document new options.
	* NEWS: Mention new support.

2012-05-14  DJ Delorie  <dj@redhat.com>

	* config/rx-parse.y (rx_range): declare.
	(O1,O2,O3,O4): Add calls to rx_range.
	(UO1,UO2,UO3): Likewise.
	(IMM2,IMMB): Likewise.
	(rx_range): New.

	* config/tc-rx.c (rx_fetchalign): Declare.
	(md_pseudo_table): Add .fetchalign.
	(RX_NBASE_FETCHALIGN): New.
	(fetchalign_bytes): New.
	(rx_fetchalign): New.
	(rx_frag_init): If a "magic" value is found, also init the
	machine-specific data.
	(md_assemble): Note following opcode size if called for.
	(rx_next_opcode): New.
	(rx_relax_frag): Support .fetchalign.
	(md_convert_frag): Likewise.
	* doc/c-rx.texi (RX-Directives): Add .fetchalign.

2012-05-14  James Lemke  <jwlemke@codesourcery.com>

	* config/tc-ppc.c (insn_validate): New func of existing code to call..
	(ppc_setup_opcodes): ..from 2 places here.
	Revise for second (VLE) opcode table.
	Add #ifdef'd code to print opcode tables.

2012-05-14  James Lemke  <jwlemke@codesourcery.com>

	* config/tc-ppc.c (ppc_setup_opcodes): Allow out-of-order
	for the VLE conditional branches.
